<resources>
    <string name="app_name">FAN$</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="action_bar_back">Back</string>
    <string name="cosmetic">美妆</string>
    <string name="food">美食</string>
    <string name="game">游戏</string>
    <string name="literature">文学</string>
    <string name="finance">已筹资:¥</string>
    <string name="supportNum">支持数:</string>
    <string name="actionbar_title">actionbar_Title</string>
    <string name="address_name">收货人</string>
    <string name="address_phone">联系电话</string>
    <string name="address_district">所在地区</string>
    <string name="address">详细地址</string>
    <string name="postcode">邮编</string>
    <string name="address_edit">编辑</string>
    <string name="address_delete">删除</string>
    <string name="network_state">请检查网络连接状态</string>
    <string name="message">消息</string>
    <string name="not_read_message">条未读</string>
    <string name="send">发送</string>
    <string name="chat_to_home">跳转到主页</string>
    <string name="activity_category">android.intent.action.FANS.CATEGORY</string>
    <string name="activity_login">android.intent.action.FANS.LOGIN.LOGIN</string>
    <string name="activity_project">android.intent.action.FANS.USER.PROJECT.ACTIVITY.PROJECT</string>
    <string name="activity_homepage">android.intent.action.FANS.USER.ACTIVITY.HOMEPAGE"</string>
    <string name="activity_project_detail">android.intent.action.FANS.PROJECT.ACTIVITY.PROJECTDETAIL</string>
    <string name="activity_chat">android.intent.action.FANS.CHAT</string>
    <string name="activity_news_detail">android.intent.action.FANS.NEWSDETAIL</string>
    <string name="activity_search">android.intent.action.FANS.SEARCH.ACTIVITY.SEARCH</string>
    <string name="activity_setting">android.intent.action.FANS.SETTING</string>
    <string name="activity_address">android.intent.action.FANS.ADDRESS</string>
    <string name="activity_setting_account">android.intent.action.FANS.SETTINGACCOUNT</string>
    <string name="activity_reset_password">android.intent.action.FANS.RESETPASSWORD</string>
    <string name="activity_user_info">android.intent.action.FANS.USERINFO</string>
    <string name="activity_project_create">android.intent.action.FANS.CREATEPROJECT</string>
    <string name="activity_my_order">android.intent.action.FANS.USER.ORDER.ACTIVITY.MYORDER</string>
    <string name="activity_publish_dynamic">android.intent.action.FANS.PUBLISHDYNAMIC</string>
    <string name="activity_big_picture">android.intent.action.FANS.UTILS.BIGPICTURE</string>
    <string name="activity_project_detail_comment">android.intent.action.FANS.PROJECT.ACTIVITY.PROJECTDETAILCOMMENT</string>
    <string name="activity_project_comment">android.intent.action.FANS.PROJECT.ACTIVITY.PROJECTCOMMENT</string>
    <string name="activity_project_support">android.intent.action.FANS.PROJECT.ACTIVITY.PROJECTSUPPORT</string>
    <string name="activity_project_order">android.intent.action.FANS.PROJECT.ACTIVITY.PROJECTORDERENSURE</string>
    <string name="activity_pay_success">android.intent.action.FANS.PROJECT.ACTIVITY.PAYSUCCESS</string>
    <string name="activity_user_order_detail">android.intent.action.FANS.USER.ORDER.ACTIVITY.ORDERDETAIL</string>
    <string name="activity_project_web">android.intent.action.FANS.PROJECT.ACTIVITY.PROJECTDETAILWEB</string>
    <string name="activity_project_supporter_list">android.intent.action.FANS.PROJECT.ACTIVITY.PROJECTDETAILSUPPORTERLIST</string>
    <string name="activity_moment">android.intent.action.FANS.SOCIAL.ACTIVITY.MOMENT</string>
    <string name="activity_send_moment">android.intent.action.FANS.SOCIAL.ACTIVITY.MOMENTSEND</string>
    <string name="activity_moment_select_project">android.intent.action.FANS.SOCIAL.ACTIVITY.MOMENTSELECTPROJECT</string>
    <string name="activity_homepage_user_moment_list">android.intent.action.FANS.USER.INFO.ACTIVITY.USERMOMENTLIST</string>
    <string name="activity_homepage_user_following">android.intent.action.FANS.USER.INFO.ACTIVITY.USERFOLLOWING</string>
    <string name="activity_homepage_user_follower">android.intent.action.FANS.USER.INFO.ACTIVITY.USERFOLLOWER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url_checker">http://api.immortalfans.com:8080/common/newChecker</string>
    <string name="url_new_user">http://api.immortalfans.com:8080/userbasic/newUser</string>
    <string name="url_login_by_phone">http://api.immortalfans.com:8080/userbasic/login</string>
    <string name="url_forget_Pwd">http://api.immortalfans.com:8080/userbasic/forgetPwd</string>
    <string name="url_user">http://api.immortalfans.com:8080/user/</string>
    <string name="url_resources">http://resources.immortalfans.com:8080/</string>
    <string name="url_userbasic">http://api.immortalfans.com:8080/userbasic/</string>
    <string name="url_project">http://api.immortalfans.com:8080/project/</string>
    <string name="url_add_project">http://api.immortalfans.com:8080/project/1/</string>
    <string name="url_add_feedback">http://api.immortalfans.com:8080/project/1/</string>
    <string name="url_project_image">http://api.immortalfans.com:8080/project/1/</string>
    <string name="url_search_project">http://api.immortalfans.com:8080/search/project</string>
    <string name="url_search_user">http://api.immortalfans.com:8080/search/user</string>
    <string name="url_sys_feedback">http://api.immortalfans.com:8080/sys/feedback</string>
    <string name="url_alipay_mobile">http://api.immortalfans.com:8080/pay/mobile</string>
    <string name="url_dynamic_image">http://api.immortalfans.com:8080/project/1/</string>
    <string name="sharepreference_checker">checker</string>
    <string name="sharepreference_checker_phone">checker_phone</string>
    <string name="sharepreference_new_user">new_user</string>
    <string name="sharepreference_login_by_phone">login_by_phone</string>
    <string name="sharepreference_login_message">login_message</string>
    <string name="sharepreference_logout">logout</string>
    <string name="sharepreference_user_info">user_info</string>
    <string name="sharepreference_upload_head">upload_head</string>
    <string name="header_hint_refresh_normal">再拉，再拉就刷新给你看</string>
    <string name="header_hint_refresh_ready">够了啦，我刷新就是了</string>
    <string name="header_hint_refresh_loading">刷新好累哦&#8230;</string>
    <string name="header_hint_refresh_time">更新时间：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">释放后加载</string>
    <string name="weibosdk_demo_feature_oauth">微博授权</string>
    <string name="weibosdk_demo_feature_share">分享到微博</string>
    <string name="weibosdk_demo_feature_pay">微博支付</string>
    <string name="weibosdk_demo_social_component">社会化组件</string>
    <string name="weibosdk_demo_feature_login_logout">登录注销按钮</string>
    <string name="weibosdk_demo_feature_nick_name_login">昵称登录</string>
    <string name="weibosdk_demo_feature_open_api">开放接口（Open API）</string>
    <string name="weibosdk_demo_feature_open_device_id">获取设备 ID</string>
    <string name="weibosdk_demo_feature_scheme_page">scheme 调用微博指定页面</string>
    <string name="weibosdk_demo_feature_game_page">游戏接口 </string>
    <string name="weibosdk_demo_feature_pay_page">支付接口 </string>
    <string name="weibosdk_demo_shear_message">分享到私信 </string>
    <string name="weibosdk_demo_feature_upload_log">上传统计日志</string>
    <string name="weibosdk_demo_obtain_token_via_sso_all_in_one">SSO 授权（ALL IN ONE）</string>
    <string name="weibosdk_demo_obtain_token_via_web">SSO 授权（Web）</string>
    <string name="weibosdk_demo_obtain_token_via_sso">SSO 授权（仅客户端）</string>
    <string name="weibosdk_demo_obtain_token_via_mobile">手机短信注册登录</string>
    <string name="weibosdk_demo_obtain_token_via_signature">Web 授权</string>
    <string name="weibosdk_demo_obtain_token_via_quick_sso">通过微博客户端快速授权</string>
    <string name="weibosdk_demo_obtain_token_via_code">通过 Code 获取 Token</string>
    <string name="weibosdk_demo_obtain_token_logout">用户登出</string>
    <string name="weibosdk_demo_token_info">Token 信息：</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="weibosdk_demo_obtain_token_hint"><b>请注意：</b>\n<li>SSO 登录需要微博客户端的支持，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 Web 授权认证（即第一种认证方式）</li>\n<li>如果您通过方式一和方式二获取不到 Token，而是获取到 code，那说明您的包名和签名存在问题，请到开放平台注册包名和签名。详情请查看 FAQ 文档</li></string>
    <string name="weibosdk_demo_obtain_token_via_sso_hint">使用 SSO 登录前，请检查手机上是否已经安装新浪微博客户端，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 进行认证。</string>
    <string name="weibosdk_demo_obtain_token_via_code_hint"><b>请注意：</b>基于以下几点原因，您可能不想使用前面的两种授权方式：\n<li>出于安全性的考虑，您不信任目前使用应用的包名和签名来获取 Token 的方式</li>\n<li>您不想安装微博客户端</li>\n您可以自行通过 Code 来获取 Token。通过这种方式需要使用到 APP_SECRET，请务必妥善保管好自己的 APP_SECRET，<b>不要直接暴露在程序中，泄露有风险</b>。\n<b>更多细节请查看：</b><a href="http://open.weibo.com/wiki/%E6%8E%88%E6%9D%83%E6%9C%BA%E5%88%B6%E8%AF%B4%E6%98%8E#Web.E5.BA.94.E7.94.A8.E7.9A.84.E9.AA.8C.E8.AF.81.E6.8E.88.E6.9D.83">验证授权步骤</a></string>
    <string name="weibosdk_demo_step_to_obtain_code">第一步：获取 Code</string>
    <string name="weibosdk_demo_step_to_obtain_token">第二步：通过 Code 获取 Token</string>
    <string name="weibosdk_demo_code_text_hint">第一步获取到的 Code：（一次性有效）</string>
    <string name="weibosdk_demo_token_text_hint">第二步获取到的 Token：</string>
    <string name="weibosdk_demo_token_to_string_format">Token：%1$s \nRefresh Token：%2$s \nexpires_in：%3$s</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_toast_obtain_code_success">获取 Code 成功</string>
    <string name="weibosdk_demo_toast_obtain_code_failed">获取 Code 失败</string>
    <string name="weibosdk_demo_toast_obtain_token_success">获取 Token 成功</string>
    <string name="weibosdk_demo_toast_obtain_token_failed">获取 Token 失败</string>
    <string name="weibosdk_demo_game_achievement_add">后台游戏成就对象入库</string>
    <string name="weibosdk_demo_game_achievement_update">后台游戏成就对象更新</string>
    <string name="weibosdk_demo_game_relation_add">用户获得游戏成就关系入库</string>
    <string name="weibosdk_demo_game_relation_update">用户获得游戏成就关系更新</string>
    <string name="weibosdk_demo_game_score_add">得分关系入库</string>
    <string name="weibosdk_demo_game_read_player_score">读取玩家游戏分数</string>
    <string name="weibosdk_demo_game_read_player_friend_score">读取玩家好友的游戏分数 </string>
    <string name="weibosdk_demo_game_read_achievement_user_gain">读取玩家在某个游戏下的成就 </string>
    <string name="weibosdk_demo_game_invatation_friend_list">邀请好友列表 </string>
    <string name="weibosdk_demo_game_invatation_one_friend">邀请好友  单个h5页面 </string>
    <string name="weibosdk_demo_game_result_msg">接口请求结果 </string>
    <string name="weibosdk_demo_is_support_sdk">当前微博客户端是否支持 SDK</string>
    <string name="weibosdk_demo_register_app_to_weibo">注册应用到微博</string>
    <string name="weibosdk_demo_share_to_weibo">分享到微博（仅客户端）</string>
    <string name="weibosdk_demo_share_to_weibo_all_in_one">分享到微博（ALL IN ONE）</string>
    <string name="weibosdk_demo_register_app_to_weibo_hint"><li>如何查看是否注册成功？打开微博客户端->点击发搏器->点击右下角的＋号->点击添加应用，看看能否看到该 DEMO 应用。</li>\n<li>当您的应用成功的注册到微博后，您可以通过从微博客户端唤起您的应用，实现分享（即微博附件栏集成分享）。</li>\n<li>该附件栏集成分享权限需要合作申请。<b>详情请见：</b><a href="http://open.weibo.com/wiki/%E7%A7%BB%E5%8A%A8%E5%AE%A2%E6%88%B7%E7%AB%AF%E6%8E%A5%E5%85%A5">2、微博原生分享 --> b) 集成分享</a></li>\n<b>请注意：</b>目前该 DEMO 应用已申请过权限，默认情况下，第三方应用没有对应权限。</string>
    <string name="weibosdk_demo_obtain_client_abstract_info_hint">当前微博客户端信息如下：</string>
    <string name="weibosdk_demo_is_installed_weibo">1. 是否安装了微博客户端？</string>
    <string name="weibosdk_demo_support_api_level">2. 当前微博客户端支持的 SDK 版本号：</string>
</resources>